[package]
name = "code-paste-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.19"
actix-cors = "0.6.0-beta.8"
config = "0.11"
dotenv = "0.15"
serde = "1.0.133"
serde_json = "1"
deadpool-postgres = {version = "0.10.1", features = ["serde"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
tokio-postgres = "0.7.5"
anyhow = "1.0.52"
env_logger = "0.9.0"